--- a/CD1/CD1.csproj
+++ b/CD1/CD1.csproj
@@ -58,6 +58,18 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\MySQL\MySQL Connector Net 8.0.29\Assemblies\v4.5.2\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.3.1.1\lib\net471\Serilog.dll</HintPath>
+    </Reference>
+    <Reference Include="Serilog.Sinks.Console, Version=5.0.1.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.Sinks.Console.5.0.1\lib\net471\Serilog.Sinks.Console.dll</HintPath>
+    </Reference>
+    <Reference Include="Serilog.Sinks.EventLog, Version=3.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.Sinks.EventLog.3.1.0\lib\net45\Serilog.Sinks.EventLog.dll</HintPath>
+    </Reference>
+    <Reference Include="Serilog.Sinks.File, Version=5.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.Sinks.File.5.0.0\lib\net45\Serilog.Sinks.File.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -105,58 +117,54 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BDDmanager\Class1.cs" />
-    <Compile Include="DAL\acces.cs" />
-    <Compile Include="connexion.cs">
+    <Compile Include="bddmanager\Class1.cs" />
+    <Compile Include="controller\connexioncontroller.cs" />
+    <Compile Include="controller\personnelcontroller.cs" />
+    <Compile Include="DAL\Access.cs" />
+    <Compile Include="DAL\personnelAccess.cs" />
+    <Compile Include="DAL\ResponsableAccess.cs" />
+    <Compile Include="DAL\serviceAccess.cs" />
+    <Compile Include="view\connexion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="connexion.Designer.cs">
+    <Compile Include="view\connexion.Designer.cs">
       <DependentUpon>connexion.cs</DependentUpon>
     </Compile>
-    <Compile Include="personnel.cs">
+    <Compile Include="view\personnel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="personnel.Designer.cs">
+    <Compile Include="view\personnel.Designer.cs">
       <DependentUpon>personnel.cs</DependentUpon>
     </Compile>
-    <Compile Include="modifierperso.cs">
+    <Compile Include="view\absence.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="modifierperso.Designer.cs">
-      <DependentUpon>modifierperso.cs</DependentUpon>
-    </Compile>
-    <Compile Include="absence.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="absence.Designer.cs">
+    <Compile Include="view\absence.Designer.cs">
       <DependentUpon>absence.cs</DependentUpon>
     </Compile>
-    <Compile Include="modifierabsence.cs">
+    <Compile Include="view\modifierabsence.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="modifierabsence.Designer.cs">
+    <Compile Include="view\modifierabsence.Designer.cs">
       <DependentUpon>modifierabsence.cs</DependentUpon>
     </Compile>
     <Compile Include="modele\absence.cs" />
     <Compile Include="modele\motif.cs" />
     <Compile Include="modele\personnel.cs" />
-    <Compile Include="modele\responsable.cs" />
+    <Compile Include="modele\Responsable.cs" />
     <Compile Include="modele\service.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="connexion.resx">
+    <EmbeddedResource Include="view\connexion.resx">
       <DependentUpon>connexion.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="personnel.resx">
+    <EmbeddedResource Include="view\personnel.resx">
       <DependentUpon>personnel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="modifierperso.resx">
-      <DependentUpon>modifierperso.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="absence.resx">
+    <EmbeddedResource Include="view\absence.resx">
       <DependentUpon>absence.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="modifierabsence.resx">
+    <EmbeddedResource Include="view\modifierabsence.resx">
       <DependentUpon>modifierabsence.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
