--- a/CD1/packages.config
+++ b/CD1/packages.config
@@ -7,6 +7,10 @@
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
+  <package id="Serilog" version="3.1.1" targetFramework="net472" />
+  <package id="Serilog.Sinks.Console" version="5.0.1" targetFramework="net472" />
+  <package id="Serilog.Sinks.EventLog" version="3.1.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net472" />
