--- a/CD1/CD1.csproj
+++ b/CD1/CD1.csproj
@@ -117,24 +117,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="bddmanager\Class1.cs" />
+    <Compile Include="bddmanager\BddManager.cs" />
     <Compile Include="controller\connexioncontroller.cs" />
     <Compile Include="controller\personnelcontroller.cs" />
     <Compile Include="DAL\Access.cs" />
     <Compile Include="DAL\personnelAccess.cs" />
     <Compile Include="DAL\ResponsableAccess.cs" />
     <Compile Include="DAL\serviceAccess.cs" />
-    <Compile Include="view\connexion.cs">
+    <Compile Include="view\Connexion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\connexion.Designer.cs">
-      <DependentUpon>connexion.cs</DependentUpon>
+    <Compile Include="view\Connexion.Designer.cs">
+      <DependentUpon>Connexion.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\personnel.cs">
+    <Compile Include="view\PersonnelFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\personnel.Designer.cs">
-      <DependentUpon>personnel.cs</DependentUpon>
+    <Compile Include="view\PersonnelFrm.Designer.cs">
+      <DependentUpon>PersonnelFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="view\absence.cs">
       <SubType>Form</SubType>
@@ -150,16 +150,16 @@
     </Compile>
     <Compile Include="modele\absence.cs" />
     <Compile Include="modele\motif.cs" />
-    <Compile Include="modele\personnel.cs" />
+    <Compile Include="modele\Personnel.cs" />
     <Compile Include="modele\Responsable.cs" />
     <Compile Include="modele\service.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="view\connexion.resx">
-      <DependentUpon>connexion.cs</DependentUpon>
+    <EmbeddedResource Include="view\Connexion.resx">
+      <DependentUpon>Connexion.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="view\personnel.resx">
-      <DependentUpon>personnel.cs</DependentUpon>
+    <EmbeddedResource Include="view\PersonnelFrm.resx">
+      <DependentUpon>PersonnelFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\absence.resx">
       <DependentUpon>absence.cs</DependentUpon>
